# linealert-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.project/: README.md  active-work.json
docs/: baseline_resolution.md  diagnostic_projection.md  replay_baseline_assessment.md  repository-lineage.md  timing_signal_analysis.md
docs/adr/: 0001-core-boundary.md
examples/: events.jsonl  labeler_baseline_registry.json  labeler_demo_config.json  labeler_demo_events.jsonl  labeler_diagnostic_guide.json  labeler_operator_report.json  labeler_signal_policy.json  labeler_timing_baseline_contexts.json  labeler_timing_history.jsonl  replay_config.json
src/linealert_core/: __init__.py  baseline.py  baseline_io.py  baseline_replay.py  cli.py  diagnostic_cli.py  diagnostic_io.py  diagnostic_projection.py  diagnostics.py  events.py  machine.py  mosaic.py  pipeline.py  replay.py  signal_io.py  signal_processing.py  timing.py  topology.py
tests/: conftest.py  test_baseline.py  test_baseline_replay.py  test_diagnostic_projection.py  test_events.py  test_example_replay.py  test_machine_profile.py  test_mosaic.py  test_pipeline.py  test_project_state.py  test_replay.py  test_signal_processing.py
